[package]
name = "ckb-standalone-types"
version = "0.0.1-pre.1"
authors = ["jjy <jjyruby@gmail.com>"]
edition = "2018"
license = "MIT"
description = "A standalone version of ckb-types"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["std"]
std = ["molecule/std"]

[dependencies]
molecule = { version = "0.8.0-alpha", default-features = false }
cfg-if = "0.1"
